# rocketry

./: .gitignore  avr-atmega4809.json  avr-upload.sh
atmega4809-hal/: Cargo.toml  test.lua
atmega4809-hal/src/: clock.rs  gpio.rs  i2c.rs  lib.rs  pwm.rs  spi.rs  usart.rs
atpack/avrasm/inc/: m1608def.inc  m1609def.inc  m3208def.inc  m3209def.inc  m324PBdef.inc  m4809def.inc  m644RFR2def.inc  m64HVE2def.inc
atpack/include/: component-version.h
bletest/: Cargo.toml
bletest/src/: main.rs
haltset/: atpack
haltset/atpack/: Atmel.ATmega_DFP.pdsc  Atmel.ATmega_DFP.sha1  package.content
haltset/atpack/avrasm/inc/: m1284RFR2def.inc  m168PBdef.inc  m2564RFR2def.inc  m4808def.inc  m48PBdef.inc  m808def.inc  m809def.inc  m88PBdef.inc
haltset/haltest/: Cargo.toml
haltset/haltest/.cargo/: config.toml
haltset/haltest/avr-specs/: avr-atmega48p.json
haltset/haltest/src/: main.rs
template/: avr-atmega4809.json  rust-toolchain.toml
testbed/: Cargo.toml
testbed/src/: main.rs  process.rs
testing/: Cargo.toml  avr-atmega4809.json  avrxmega3-novectors.x  build.rs  usbreset.c
testing/.cargo/: config.toml
testing/src/: avr_alloc.rs  gpio.rs  i2c.rs  ints.rs  main.rs  nau7802.rs  testing.rs
