[package]
name = "atmega4809-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "=1.0.0-alpha.7"
atmega-hal = { git = "https://github.com/Rahix/avr-hal.git", features=["atmega48p"]}
nb = "1.0.0"
ufmt = "0.2.0"
