[package]
name = "testing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "testing"
test = false
bench = false

[dependencies]
atmega4809-hal = { path = "../atmega4809-hal" }
nau7802 = { git = "https://github.com/amiraeva/nau7802-rs", rev = "83465132eefb763829b8c2127f0a2a87fc2278eb" }
#avr-oxide = { version = "*", features = ["20MHz", "arduino_nanoevery", "atmega4809", "bootable", "panicout_usart3", "tcb0", "rtc", "twi0"] }
#avr-oxide = { version = "0.4.0", features = [ "runtime_checks", "bootable", "panic_handler", "arduino_nanoevery", "20MHz", "panicout_usart3", "tcb0", "rtc", "twi0" ] }
#panic-halt = "0.2.0"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
debug = true
panic = "abort"
lto = true
opt-level = "s"
overflow-checks = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
overflow-checks = false
